# UniverseSimulation

./: README.md  closed_energy.csv  local_test.csv  open_energy.csv  relational_universe_feature_lab.py  relational_universe_perturbation_lab.py  relational_universe_rule_delta_lab.py  relational_universe_sim.py  trajectory.csv
rag_service/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
rag_service/app/: main.py  scripts_adapter.py  settings.py
rag_service/app/api/: case_browse.py  routes_admin.py  routes_cell.py  routes_chat.py  routes_interviews.py  routes_research.py  routes_ui.py
rag_service/app/models/: schemas.py
rag_service/app/rag/: pipeline.py
rag_service/app/static/: chat.html  (+1 more)
rag_service/config/: rag_cases.yml  research_api_tokens.example.json  sync_orchestrator.example.toml
rag_service/docker/: Dockerfile  docker-compose.yml
rag_service/docs/: RAG_SERVICE_API.md  README.md  UNIVERSE_ARGUMENTATION_MAP.md  UNIVERSE_CORPUS_PLAN.md  UNIVERSE_DEEP_RESEARCH_PROMPT.md  UNIVERSE_RAG_STATUS.md  UNIVERSE_TOOL_RUNBOOK.md
rag_service/prompts/: answer_template.md  answer_template_universe_argumentation.md  answer_template_universe_project.md  answer_template_universe_prompts.md  answer_template_universe_tools.md  system_persona.md  system_persona_universe_argumentation.md  system_persona_universe_project.md  system_persona_universe_prompts.md  system_persona_universe_tools.md
rag_service/scripts/: apply_migrations.py  eval_run.py  ingest_folder.py  rebuild_index.py  rename_source_type.py  sync_folder.py  sync_orchestrator.py
(+130 files in other folders)
